feat: implement staff dashboard, check-in history, and backend migration configuration